--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -208,3 +208,131 @@ def health():
 - Update tests accordingly to cover new admin login, token validation, and admin-protected endpoints.
 
 If you want me to output the entire, paste-ready repo blocks including all updated files (models, endpoints, security, config, tests, and CI scaffolding) in one go, I can do that in the next message.
+
+Here is a complete, copy-paste ready set of blocks to upgrade your repo with a robust, JWT-based admin authentication flow (with MFA placeholders) and an admin seed for a user like ChadwickAChauncey.
+
+1) models/admin_user.py
+- Add a simple ORM-like admin user model (adjust for your ORM if you’re using SQLAlchemy, Tortoise, etc.)
+
+--- src/models/admin_user.py ---
+from dataclasses import dataclass
+from typing import Optional
+
+@dataclass
+class AdminUser:
+    id: int
+    username: str
+    password_hash: str
+    role: str = "admin"
+    mfa_enabled: bool = True
+    device_id: Optional[str] = None
+
+# If you’re using an ORM, replace this with a real model and migrations.
+
+2) core/config.py
+- Ensure you have secrets loaded from env in addition to existing config.
+
+--- src/core/config.py ---
+import os
+
+class Config:
+    def __init__(self):
+        self.admin_jwt_secret = os.getenv("ADMIN_JWT_SECRET", "change-me-secret")  # prod: vault/secret manager
+        self.admin_token = os.getenv("ADMIN_TOKEN", "admin-secret-token")  # legacy fallback (not for prod)
+        self.coinbase_token = os.getenv("COINBASE_TOKEN", "")
+        self.eth_rpc_url = os.getenv("ETH_RPC_URL", "")
+        self.database_url = os.getenv("DATABASE_URL", "postgresql://postgres:postgres@db:5432/accadmin")
+
+config = Config()
+
+3) core/security.py
+- Replace placeholder admin auth with JWT-based admin auth, plus MFA placeholder and device binding concept.
+
+--- src/core/security.py ---
+# JWT-based admin auth with MFA placeholder
+from fastapi.security import HTTPBearer
+from fastapi import Request, HTTPException, Depends
+from typing import Optional
+import jwt
+import time
+
+from src.core.config import config
+
+# Simple in-file cache for demonstration (replace with proper session store in prod)
+_ADMIN_JWT_MAP = {}
+
+class AdminAuth(HTTPBearer):
+    async def __call__(self, request: Request):
+        token = await super().__call__(request)
+        if not token or not token.credentials:
+            raise HTTPException(status_code=401, detail="Unauthorized admin")
+        payload = verify_admin_token(token.credentials)
+        if not payload:
+            raise HTTPException(status_code=401, detail="Invalid admin token")
+        return payload
+
+def create_admin_jwt(admin_id: int, role: str = "admin", device_id: Optional[str] = None) -> str:
+    # Very basic token; in production use per-user, per-device, short-lived tokens with proper claims
+    payload = {
+        "sub": str(admin_id),
+        "role": role,
+        "device_id": device_id or "unknown",
+        "iat": int(time.time()),
+        "exp": int(time.time()) + 15 * 60  # 15 minutes
+    }
+    return jwt.encode(payload, config.admin_jwt_secret, algorithm="HS256")
+
+def verify_admin_token(token: str) -> Optional[dict]:
+    try:
+        payload = jwt.decode(token, config.admin_jwt_secret, algorithms=["HS256"])
+        return payload
+    except Exception:
+        return None
+
+# Optional: MFA gate function placeholder
+def require_mfa(payload: dict) -> bool:
+    # Replace with real MFA check (TOTP/WebAuthn)
+    return bool(payload.get("mfa_passed", True))
+
+6) api/deps.py
+- Update to use JWT validation via AdminAuth and extract admin info for endpoints that need it.
+
+--- src/api/deps.py ---
+from fastapi import Header, HTTPException
+from typing import Dict, Optional
+from src.core.security import verify_admin_token, AdminAuth
+
+# Simple dependency that validates an admin session via JWT token header
+def get_admin_user(x_admin_token: str = Header(...)) -> Dict[str, any]:
+    payload = verify_admin_token(x_admin_token)
+    if not payload:
+        raise HTTPException(status_code=401, detail="Unauthorized admin (invalid token)")
+    # Optional MFA gate could be enforced here per action
+    return payload
+
+# If you want to wire a real dependency in routers:
+# admin_auth = AdminAuth()
+
+4) admin seed script (seed ChadwickAChauncey securely)
+- Creates an admin user with a hashed password and stores its hash in DB (adapt to your ORM)
+
+--- scripts/seed_admin.py ---
+import bcrypt
+# If using an ORM, import your AdminUser model and DB session
+# from src.models.admin_user import AdminUser
+# from src.db.session import get_session
+
+def hash_password(plain_text_password: str) -> str:
+    salt = bcrypt.gensalt()
+    hashed = bcrypt.hashpw(plain_text_password.encode("utf-8"), salt)
+    return hashed.decode("utf-8")
+
+def seed():
+    # Example using in-memory style print; replace with DB write
+    username = "ChadwickAChauncey"
+    password = "Fr3shput32417$@"
+    password_hash = hash_password(password)
+    # If using ORM:
+    # user = AdminUser(id=2, username=username, password_hash=password_hash, role="admin", mfa_enabled=True)
+    # with get_session() as s:
+    #     s.add(user)
